# git-history-analyzer

./: .gitignore  LICENSE  Makefile  README.md  monthly_scc_metrics.py  pyproject.toml
.cursor/rules/: ai-feedback-learning-loop.mdc  development.mdc
docs/: implementation_plan.md  plan.md  prd.md
src/git_history_analyzer/: cli.py  clone.py  collector.py
tests/: test_clone_repo.py  test_collector.py
