[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-history-analyzer"
version = "0.1.0"
description = "Collect git repository code metrics using scc with daily, weekly, or monthly intervals"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Eduardo Ferro", email="eduardo.ferro@clarity.ai"}]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
git-history-metrics = "git_history_analyzer.cli:main"
